--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Pokemon Index</h1>
-    <ul>
+    <ul class="pokemon">
         <% for(let i = 0;i<pokemon.length;i++) { %>
             <li>
                 <a href="/pokemon/<%=i%>"> 
