--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Index</title>
 </head>
+
 <body>
     <h1>Pokemon Index</h1>
     <ul class="pokemon">
-        <% for(let i = 0;i<pokemon.length;i++) { %>
+        <% for(let i=0;i<pokemon.length;i++) { %>
             <li>
-                <a href="/pokemon/<%=i%>"> 
+                <a href="/pokemon/<%=i%>">
                     <%=pokemon[i].name%>
                 </a>
             </li>
-       <% } %>
+            <% } %>
     </ul>
+    <a href="/pokemon/new">
+        <button>
+            Create New Pokemon
+        </button>
+    </a>
 </body>
+
 </html>
