--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,6 +14,10 @@
         <%=pokemon.name%>
     </h2>
     <img src="<%=pokemon.img%>" />
+    <form action="/pokemon/<%=arrIndex%>?_method=DELETE" method='POST'>    <!--form can't delete so need to use a method -->
+        <input type="submit" value="Delete">
+    </form>
+    
 </body>
 
 </html>
