:added signup page

--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -9,8 +9,8 @@
 <body>
     <h1>Players</h1>
 
-    <a href='/users/signup'>Sign Up</a>
-    <a href='/users/login'>Log In</a>
-    
+    <a href='/players/signup'>Sign Up</a>
+    <a href='/players/login'>Log In</a>
+
 </body>
 </html>
