add delete function and style page to give a background color

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -13,6 +13,7 @@
         name: <input type="text" value ="<%=pokemon.name%>" name="name"><br>
         image: <input type="text" value ="<%=pokemon.img%>"name="img"><br>
         <input type="submit" value="Edit Pokemon">
+        <link rel='stylesheet' href='../../css/app.css'>
     </form>
 
 </body>
