--- a/views/players/editProfile.ejs
+++ b/views/players/editProfile.ejs
@@ -14,6 +14,10 @@
         Username: <input type="text" name="username"value="<%=player.username%>"><br>
         Password: <input type="text" name="password"value="<%=player.password%>"><br>
         <input type="submit" value="Edit">
+        <link rel='stylesheet' href='../../../css/app.css'>
+    </form>
+    <form action="/players/profiles/<%=index%>?_method=DELETE" method='POST'>
+        <input type="submit" value="Delete Profile">
     </form>
 </body>
 </html>
