--- a/views/players/profile.ejs
+++ b/views/players/profile.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Player Profile page</title>
+    <link rel='stylesheet' href='../../css/app.css'>
 </head>
 <body>
     <h1>Pokemon Player Profile</h1>
@@ -12,5 +13,8 @@
     <h2>Username: <%=player.username%></h2>
     <h2>Password: <%=player.password%></h2>
     <a href="/players/profile/<%=index%>/edit">Go to Edit</a>
+    <form action="/players/profiles/<%=index%>?_method=DELETE" method='POST'>
+        <input type="submit" value="Delete Profile">
+    </form>
 </body>
 </html>
