Created DB, added sequelize, created table, seeded table.  Have not modified any controllers or other files to switch from array to DB.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,11 @@
             Create New Pokemon
         </button>
     </a>
+    <a href="/players/">
+        <button>
+            Player Page
+        </button>
+    </a>
     <ul class="pokemon">
         <% for(let i=0;i<pokemon.length;i++) { %>
             <li>
