--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Players</title>
-    <link rel='stylesheet' href='./css/app.css'>
+    <link rel='stylesheet' href='../css/app.css'>
 </head>
 <body>
     <h1>Players</h1>
 
     <a href='/players/signup'>Sign Up</a>
     <a href='/players/login'>Log In</a>
-
 </body>
 </html>
