Pokemon conversion to DB complete, Players migration and seeder files complete, table created and loaded

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>Edit Pokemon</h1>
 
-    <form action="/pokemon/<%=index%>?_method=PUT" method="POST">
+    <form action="/pokemon/<%=pokemon.id%>?_method=PUT" method="POST">
         name: <input type="text" value ="<%=pokemon.name%>" name="name"><br>
         image: <input type="text" value ="<%=pokemon.img%>"name="img"><br>
         <input type="submit" value="Edit Pokemon">
