--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,7 +15,7 @@
         <%=pokemon.name%>
     </h2>
     <img src="<%=pokemon.img%>" />
-    <form action="/pokemon/<%=arrIndex%>?_method=DELETE" method='POST'>    <!--form can't delete so need to use a method -->
+    <form action="/pokemon/<%=id%>?_method=DELETE" method='POST'>    <!--form can't delete so need to use a method -->
         <input type="submit" value="Delete">
     </form>
     
