--- a/views/players/profile.ejs
+++ b/views/players/profile.ejs
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Player Profile page</title>
-    <link rel='stylesheet' href='../../css/app.css'>
+    <link rel='stylesheet' href='/css/app.css'>
+    <!-- <link rel=“shortcut icon” href=“#” type=“image/x-icon”> -->   <!--add a fav icon to tab-->
+    <link rel="icon" href="#">   <!--get rid of fav icon error since we didn't load one-->
 </head>
 <body>
     <h1>Pokemon Player Profile</h1>
     <h2>Name: <%=player.name%></h2>
     <h2>Username: <%=player.username%></h2>
     <h2>Password: <%=player.password%></h2>
-    <a href="/players/profile/<%=index%>/edit">Go to Edit</a>
-    <form action="/players/profiles/<%=index%>?_method=DELETE" method='POST'>
+    <a href="/players/profile/<%=id%>/edit">Go to Edit</a>
+    <form action="/players/profile/<%=id%>?_method=DELETE" method='POST'>
         <input type="submit" value="Delete Profile">
     </form>
 </body>
