Comment out console logs and add additional navication buttons to various screens

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,6 +15,10 @@
         <input type="submit" value="Edit Pokemon">
         <link rel='stylesheet' href='../../css/app.css'>
     </form>
+    <form action="/pokemon/<%=pokemon.id%>?_method=DELETE" method='POST'>    <!--form can't delete so need to use a method -->
+        <input type="submit" value="Delete">
+    </form>
+    <a href='/Pokemon'>Pokemon Index</a>
 
 </body>
 </html>
