--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -12,5 +12,6 @@
 
     <a href='/players/signup'>Sign Up</a>
     <a href='/players/login'>Log In</a>
+    <a href='/Pokemon'>Pokemon Index</a>
 </body>
 </html>
