--- a/views/players/profile.ejs
+++ b/views/players/profile.ejs
@@ -18,5 +18,6 @@
     <form action="/players/profile/<%=id%>?_method=DELETE" method='POST'>
         <input type="submit" value="Delete Profile">
     </form>
+    <a href="/players/">Players Screen</a>
 </body>
 </html>
