--- a/views/show.ejs
+++ b/views/show.ejs
@@ -18,6 +18,7 @@
     <form action="/pokemon/<%=id%>?_method=DELETE" method='POST'>    <!--form can't delete so need to use a method -->
         <input type="submit" value="Delete">
     </form>
+    <a href='/Pokemon'>Pokemon Index</a>
     
 </body>
 
