--- a/views/players/editProfile.ejs
+++ b/views/players/editProfile.ejs
@@ -14,7 +14,17 @@
         Name: <input type="text" name="name" value="<%=player.name%>"> <br>
         Username: <input type="text" name="username"value="<%=player.username%>"><br>
         Password: <input type="text" name="password"value="<%=player.password%>"><br>
-        <input type="submit" value="Edit">
+        Team: <input type="text" name="team" value="<%=player.Team.name%>"><br>
+        <form id='teams'>
+            <select id='selectedTeam'>
+                <option>Teams</option>
+                <% for(let i = 0;i < teams.length; i++) { %>
+                    <option value='<%=teams[i].name%>'><%=teams[i].name%></option>
+                    <% } %>
+            </select>
+        </form>
+
+        <input type="submit" value="Save">
         <link rel='stylesheet' href='/css/app.css'>
     </form>
     <form action="/players/profile/<%=id%>?_method=DELETE" method='POST'>
