--- a/views/players/profile.ejs
+++ b/views/players/profile.ejs
@@ -14,6 +14,7 @@
     <h2>Name: <%=player.name%></h2>
     <h2>Username: <%=player.username%></h2>
     <h2>Password: <%=player.password%></h2>
+    <!-- <h2>Team <%#=player.Team.name%></h2><br> -->
     <a href="/players/profile/<%=id%>/edit">Go to Edit</a>
     <form action="/players/profile/<%=id%>?_method=DELETE" method='POST'>
         <input type="submit" value="Delete Profile">
