add team ID to signup screen

--- a/views/players/signup.ejs
+++ b/views/players/signup.ejs
@@ -14,6 +14,7 @@
         Name: <input type="text" name="name"><br>
         Username: <input type="text" name="username"><br>
         Password: <input type="text" name="password"><br>
+        Team id: <input type="text" name="teamId"><br>
         <input type="submit" value="SignUp">
     </form>
 </body>
